--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ install:
   - pip install pytest-cov
   - pip install coveralls
 
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database ireporter;' -U postgres
 
 script:
   - pytest --cov
